# MNistRust

./: .gitignore  Cargo.toml
src/: main.rs
