[package]
name = "mnistrust"
version = "0.1.0"
edition = "2021"

[dependencies]
mnist = "0.6.0"
# ndarray = "0.16.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
ndarray = { version = "0.16.1", features = ["blas"] }
# blas-src = { version = "0.10", features = ["openblas"] }
# openblas-src = { version = "0.10", features = ["cblas", "system"] }